--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,67 @@ body {
   );
 }
 
+/* chessboard styles */
+
 .box {
   position: relative;
   z-index: 1;
 }
-
 #board {
   display: flex;
   justify-content: center;
-
   width: fit-content;
 }
+.boardDiv {
+  margin: auto;
+  background-color: white;
+  border: 50px solid brown;
+}
+.col-label {
+  text-align: center;
+  vertical-align: middle;
+  font-weight: bold;
+}
+.row-label {
+  text-align: center;
+  vertical-align: middle;
+  font-weight: bold;
+}
+.box {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  border: 1px solid black;
+}
 
+/* leftSideTray styles */
+.leftSideTray {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 10%;
+  left: 0%;
+  height: 70vh;
+  width: 20vw;
+  background-color: brown;
+  border: 5px solid white;
+}
+
+/* btns styles */
+/* leftTrayBtns styles */
+.btn {
+  width: 50%;
+  margin: auto;
+}
+/* removeBtn */
+.removeBtn {
+  position: absolute;
+  bottom: 10%;
+  left: 0%;
+  padding: 10px 20px;
+  background-color: red;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 21%;
+}
