--- a/styles.css
+++ b/styles.css
@@ -41,17 +41,30 @@ body {
 }
 
 /* leftSideTray styles */
-.leftSideTray {
+.rightSideTray {
   display: flex;
   flex-direction: column;
   position: absolute;
   top: 10%;
-  left: 0%;
+  right: 0%;
   height: 70vh;
   width: 20vw;
   background-color: brown;
   border: 5px solid white;
 }
+
+.movesBox {
+  display: flex;
+  position: absolute;
+  bottom: 10%;
+  left: 31%;
+  margin: auto;
+  height: 20vh;
+  width: 38%;
+  background-color: brown;
+  border: 5px solid white
+}
+
 
 /* btns styles */
 /* leftTrayBtns styles */
@@ -63,7 +76,7 @@ body {
 .removeBtn {
   position: absolute;
   bottom: 10%;
-  left: 0%;
+  right: 0%;
   padding: 10px 20px;
   background-color: red;
   color: white;
