--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     rgba(111, 117, 150, 1) 0%,
     rgba(0, 0, 0, 1) 100%
   );
+  font-family: 'Lucida Sans';
 }
 
 /* chessboard styles */
@@ -40,7 +41,7 @@ body {
   border: 1px solid black;
 }
 
-/* leftSideTray styles */
+/* rightSideTray styles */
 .rightSideTray {
   display: flex;
   flex-direction: column;
@@ -56,7 +57,7 @@ body {
 .movesBox {
   display: flex;
   position: absolute;
-  bottom: 10%;
+  bottom: 5%;
   left: 31%;
   margin: auto;
   height: 20vh;
@@ -64,6 +65,9 @@ body {
   background-color: brown;
   border: 5px solid white
 }
+
+/* movesBox content styles */
+
 
 
 /* btns styles */
