--- a/styles.css
+++ b/styles.css
@@ -54,32 +54,52 @@ body {
   border: 5px solid white;
 }
 
-.movesBox {
+/* Moves Heading Box */
+.movesHeadingBox {
   display: flex;
-  flex-direction: column;
+  position: absolute;
+  bottom: 14%;
+  left: 31%;
+  margin: auto;
+  height: 8vh;
+  width: 38%;
+  background-color: brown;
+  border: 5px solid white;
   justify-content: center;
   align-items: center;
+}
+
+/* Heading text style */
+.movesHeading {
+  color: white;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  font-size: 1.5rem;
+}
+
+/* Moves Display Box */
+.movesDisplayBox {
+  display: flex;
   position: absolute;
   bottom: 2%;
   left: 31%;
   margin: auto;
-  height: 15vh;
+  height: 10vh;
   width: 38%;
-  background-color: brown; 
-  border: 5px solid white;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5); 
-  border-radius: 10px; 
+  background-color: white;
+  border: 5px solid brown;
+  justify-content: center;
+  align-items: center;
 }
 
-/* movesBox content styles */
-.movesHeading {
-  color: white;
+/* Moves Text Style */
+.movesText {
+  color: black;
+  font-family: 'Arial', sans-serif;
+  font-size: 1rem;
+  font-weight: bolder;
   text-align: center;
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin: 10px 0;
 }
-
 
 
 /* btns styles */
