--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ body {
   width: 38%;
   background-color: white;
   border: 5px solid brown;
+  color: black;
   justify-content: center;
   align-items: center;
 }
